# hippomocks

./: .gitignore  .travis.yml  CMakeLists.txt  CreateSingleInclude.py  Makefile  README.md  appveyor.yml  build.mk  conanfile.py  make.mk  unifier.sh
.github/workflows/: clang.yml  gcc-cpp11.yml  gcc-cpp20.yml  gcc.yml  msvc.yml  test.yml
CMake/: HippoMocksConfig.cmake.in
Hippo Mocks/: Hippo Mocks.sln  Hippo Mocks.vcproj  base_mock.cpp  fN.asm  hippomocks.h
HippoMocks/: CMakeLists.txt  comsupport.h  hippomocks.h
HippoMocks/detail/: defaultreporter.h  exceptions.h  func_index.h  oldtuple.h  replace.h  reporter.h  reverse.h
HippoMocks0x/: hippomocks.h
HippoMocksTest/: CMakeLists.txt  DllApi.cpp  DllApi.h  DllModule.h  DllModule.vcxproj  Framework.cpp  Framework.h  HippoMocks.dev  HippoMocks.pro  HippoMocksTest.sln  HippoMocksTest.vcproj  HippoMocksTest_2012.sln  HippoMocksTest_2012.vcxproj  gtest-all.cc  is_virtual.cpp  main.cpp  makefile  target_cfuncs.c  target_cfuncs.h  test.cpp  test_args.cpp  test_array.cpp  test_autoptr.cpp  test_cfuncs.cpp  test_cfuncs_expectcalls.cpp  test_cfuncs_expectmincalls.cpp  test_cfuncs_multi.cpp  test_class_args.cpp  test_class_mock.cpp  test_com_support_stdcall.cpp  test_constref_params.cpp  test_cv_funcs.cpp  test_derefparam.cpp  test_dll.cpp  test_do.cpp  test_dontcare.cpp  test_dynamic_cast.cpp  test_except.cpp  test_exception_quality.cpp  test_filter.cpp  (+19 more)
HippoMocksTest/gtest/: gtest.h
SingleInclude/: hippomocks.h
injector/: injection.h  injector.cpp  injector.h  injector.vcproj  injectorTest.cpp  yaffut.h
